[package]
name = "farmer-house"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "farmer_house"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
mpl-token-metadata = { version="1.6.5", features = [ "no-entrypoint" ] }
mpl-trifle = { version="0.3.3", features = [ "no-entrypoint" ] }