[package]
name = "farmer-house"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "farmer_house"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
solana-frozen-abi-macro = "=1.14.18"
mpl-token-metadata = { version="1.8.5", features = [ "no-entrypoint" ] }
mpl-trifle = { version="0.5.3", features = [ "no-entrypoint" ] }